--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem aperiam commodi ab accusamus laudantium amet reiciendis voluptatem vero accusantium, enim quod! Atque molestias voluptas similique cumque fugiat ea commodi nam!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de Java Script</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni at dicta officiis? Neque, distinctio in? Eum vero veritatis alias sed molestias vel in sint eveniet. Inventore, tenetur! Inventore, error numquam!</p>
         </article>
     </main>
 </body>
